Updated server to 1.16.1 and removed uneccessary files